<resources>
    <string name="app_name">Calculator</string>
    <string name="ZERO">0</string>
    <string name="ONE">1</string>
    <string name="TWO">2</string>
    <string name="THREE">3</string>
    <string name="FOUR">4</string>
    <string name="FIVE">5</string>
    <string name="SIX">6</string>
    <string name="SEVEN">7</string>
    <string name="EIGHT">8</string>
    <string name="NINE">9</string>

    <string name="CLEAR">C</string>
    <string name="PARENTHISIS">()</string>
    <string name="ADD">+</string>
    <string name="SUB">-</string>
    <string name="DIVIDE">÷</string>
    <string name="MULTIPLY">✕</string>
    <string name="PLUSMINUS">+/-</string>
    <string name="EQUALS">=</string>
    <string name="POINT">.</string>
    <string name="PERCENTAGE">%</string>

    <string name="BACKSPACE"> </string>
    <string name="display"> </string>
</resources>

